plugins {
    id 'application'
	id 'org.springframework.boot' version '2.2.6.RELEASE'
}

apply plugin: 'io.spring.dependency-management'

application {
    mainClassName = 'library.LibraryApplication'
}

applicationDefaultJvmArgs = ["--enable-preview"]

group = 'library'
version = '1.0.0'
sourceCompatibility = 11
targetCompatibility = 11

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

	implementation 'com.github.javafaker:javafaker:1.0.1'
	
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'
	
	runtimeOnly 'com.h2database:h2'
	compile group: 'com.microsoft.sqlserver', name: 'mssql-jdbc', version: '8.2.2.jre11'
}
